methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:14: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
    } avance();droite();avance();gauche();}
      ^MethodsReturning:5: error: type mismatch;
 found   : Unit
 required: Boolean
  while(a == 0){
  ^