methods.returning.MethodsReturning.scala.code

def haveBaggle():Boolean = {
  
var a = 0
  while(a == 0){
    for (c2<- 1 to 7){
      
    
    for (c <- 1 to 6) {
     avance();if (estSurBiscuit()){
       a = 1
     } 
    
    } avance();droite();avance();gauche();}
    
  }
}